--- a/usdc/data.yml
+++ b/usdc/data.yml
@@ -62,7 +62,7 @@ details:
       2023. CCTP facilitates the transfer of native USDC across networks, reducing bridge and wrapped token risks associated
       with traditional “lock and mint” bridging methods. To use CCTP, users transfer native USDC on a supported source
       network to be burned. In return, an equivalent amount of native USDC is minted on a supported destination network and
-      sent to the user’s specified beneficiary wallet address. CCTP supports transfers between Ethereum, Avalanche, Arbitrum,
+      sent to the user's specified beneficiary wallet address. CCTP supports transfers between Ethereum, Avalanche, Arbitrum,
       OP Mainnet, Base, Polygon PoS, and Noble. <br />
       In August 2023, Circle launched the Programmable Wallets product, allowing developers to embed customized crypto wallets
       into applications. Developers can customize wallets by integrating USDC, opting for wallet infrastructure models such as
