--- a/usdt/data.yml
+++ b/usdt/data.yml
@@ -61,20 +61,19 @@ details:
       to the announcement, Ardoino's CEO duties would begin in December 2023.
 
 team:
-  - avatar: https://pbs.twimg.com/profile_images/1564609416409784325/MEOn4pWw_400x400.jpg
-    name: Rune Christensen
-    title: Co-founder and CEO
-    twitter: https://twitter.com/runekek
-    linkedin: https://www.linkedin.com/in/runebentsenchristensen
-  - avatar: https://pbs.twimg.com/profile_images/1699607742049337344/EVQCcUOn_400x400.jpg
-    name: Sam MacPherson
-    title: Co-founder and Lead Developer
-    twitter: https://twitter.com/hexonaut
-  - avatar: https://pbs.twimg.com/profile_images/1446204936392359947/sIpYm-BI_400x400.jpg
-    name: Doo Wan Nam
-    title: Asia Lead
-    twitter: https://twitter.com/doowannam
-    linkedin: https://www.linkedin.com/in/doo-wan-nam-b8943443
+  - avatar: https://media.licdn.com/dms/image/C4E03AQH6HrnXQXPQ8Q/profile-displayphoto-shrink_800_800/0/1638744773049?e=1714608000&v=beta&t=rbSuNeSOXxmolrShv1mgVu7-F__2BwSixLoHIC3fdPg
+    name: JL van der Velde
+    title: CEO
+    linkedin: https://www.linkedin.com/in/jl-van-der-velde-355218228
+  - avatar: https://media.licdn.com/dms/image/D4E03AQET4PyEcCqhPA/profile-displayphoto-shrink_800_800/0/1686771679988?e=1714608000&v=beta&t=2KBbCQm2EqaNeWWBEJo1pEf3FGBXdkzMOBUX_qq-PWA
+    name: Giancarlo Devasini
+    title: CFO
+    linkedin: https://www.linkedin.com/in/thiscarpenter
+  - avatar: https://media.licdn.com/dms/image/C4D03AQEzG623wtQhfQ/profile-displayphoto-shrink_800_800/0/1649273183869?e=1714608000&v=beta&t=BZfttuGCo-ojDS3ISBKpRzcFVFOJxdVz7zDHPYS4-NI
+    name: Paolo Ardoino
+    title: CTO
+    twitter: https://twitter.com/paoloardoino
+    linkedin: https://www.linkedin.com/in/paolo-ardoino-36245b42
 
 social_media:
   twitter: # [Last Week, 2 Weeks Ago, 3 Weeks Ago]
