--- a/usdt/data.yml
+++ b/usdt/data.yml
@@ -90,20 +90,23 @@ social_media:
 
 financial_analysis:
   financial_audit:
-    auditors: N.A.
+    auditors: BDO
     score: N.A.
-    analysis: N.A.
+    analysis: ln our opinion, the CRR as prepared by the management of the Group as of 30 September 2023, is, in allmaterial respects,
+      fairly presented in accordance with the criteria.
     reserve_holdings_percentage:
-      - title: RWA
-        value: 0.56
-      - title: ETH
-        value: 0.36
-      - title: Stablecoins
-        value: 0.04
-      - title: BTC
-        value: 0.03
-      - title: Others
-        value: 0.01
+      - title: Cash & Cash Equivalents & Other Short-Term Deposits
+        value: 0.8485
+      - title: Secured Loans
+        value: 0.0495
+      - title: Other Investments
+        value: 0.0389
+      - title: Precious Metals
+        value: 0.0362
+      - title: Bitcoins
+        value: 0.0291
+      - title: Corporate Bonds
+        value: 0.0005
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
       value: $238,544,833.18
