--- a/usdt/data.yml
+++ b/usdt/data.yml
@@ -109,99 +109,42 @@ financial_analysis:
         value: 0.0005
   market_capitalization_and_liquidity:
     - title: Dollar volume (24H)
-      value: $238,544,833.18
+      value: $31,182,720,081.86
     - title: Market cap	Rank
-      value: 23 ($4,888,486,141.03)
+      value: 3 ($97,657,406,456.00)
     - title: FDV
-      value: $4,888,486,141.03
+      value: $97,657,406,456.00
     - title: Turnover rate
-      value: 4.88%
+      value: 31.93%
     - title: Circulating supply
-      value: 4,892,546,955.00
+      value: $97,657,406,456.00
     - title: Total supply
-      value: 4,892,546,955.00
+      value: $97,657,406,456.00
     - title: Max supply
       value: Unlimited
     - title: All time high
-      value: $1.059
+      value: $1.32
     - title: All time high date
-      value: 2020.03.15
+      value: 2018.07.27
     - title: Down from all time high
-      value: -5.65%
+      value: -24.24%
     - title: All time low
-      value: $0.96699
+      value: $0.95072
     - title: All time low date
-      value: 2023.03.15
+      value: 2018.08.07
     - title: Up from all time low
-      value: +3.33%
+      value: +5.18%
     - title: Risks of depegging
       value: Minimum
   investments:
-    - round: "-"
-      amount: $12,000,000
-      valuation: "-"
-      date: 2017/12
-      investors: |
-        * Andreessen Horowitz
-        * Polychain
-        * FBG Capital
-        * 1confirmation
-        * Distributed Capital Partners
-        * Walden Bridge Capital
-        * Wyre Capital
-        * Scanate
-    - round: "-"
-      amount: $15,000,000
-      valuation: "-"
-      date: 2018/09
-      investors: |
-        * Andreessen Horowitz
-    - round: "-"
-      amount: $27,500,000
-      valuation: "-"
-      date: 2019/12
-      investors: |
-        * Dragonfly
-        * Paradigm
+    # - round: "-"
+    #   amount: "-"
+    #   valuation: "-"
+    #   date: "-"
+    #   investors: "-"
   list_of_investors:
-    - name: 1confirmation
-      logo: assets/1confirmation.jpg
-    - name: A.Capital
-      logo: assets/A.Capital.png
-    - name: Andreessen Horowitz
-      logo: assets/Andreessen Horowitz.png
-    - name: Bain Capital Ventures
-      logo: assets/Bain Capital Ventures.png
-    - name: Distributed Capital Partners
-      logo: assets/Distributed Capital Partners.jpg
-    - name: Dragonfly
-      logo: assets/Dragonfly.jpg
-    - name: FBG Capital
-      logo: assets/FBG Capital.jpg
-    - name: FinTech Collective
-      logo: assets/FinTech Collective.jpg
-    - name: Hack VC
-      logo: assets/Hack VC.jpg
-    - name: IDEO CoLab Ventures
-      logo: assets/IDEO CoLab Ventures.png
-    - name: IOSG
-      logo: assets/IOSG.jpg
-    - name: Inflection
-      logo: assets/Inflection.jpg
-    - name: ParaFi Capital
-      logo: assets/ParaFi Capital.jpg
-    - name: Paradigm
-      logo: assets/Paradigm.jpg
-    - name: Placeholder VC
-      logo: assets/Placeholder VC.jpg
-    - name: Polychain
-      logo: assets/Polychain.png
-    - name: Standard Crypto
-      logo: assets/Standard Crypto.jpg
-    - name: Uncorrelated
-      logo: assets/Uncorrelated.png
-    - name: Walden Bridge Capital
-      logo: assets/Walden Bridge Capital.jpg
+    # - name: "-"
+    #   logo: "-"
 
 security_and_compliance:
   - title: Security Assurance
