--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -35,7 +35,7 @@ jobs:
         if [ -f "${dir}data.yml" ]; then
             echo "Processing folder: $dir"
             project_dir=$(pwd)/$dir
-            python -c "import os; os.chdir('${dir}'); from pyinsightic.sosovalue import SosoValue; analysis = SosoValue(project_dir='${project_dir}'); analysis.run_analysis();"
+            python -c "import os; os.chdir('${dir}'); analysis = pyinsightic.SosoValue(project_dir='${project_dir}'); analysis.run_analysis();"
             echo "Analysis completed for $dir"
             cat "${dir}sosovalue.json"
             break
