--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -28,7 +28,10 @@ jobs:
         pip install git+https://$GITHUB_TOKEN:x-oauth-basic@github.com/insightic/pyinsightic.git#egg=pyinsightic
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN_SECRET }}
-    
+
+    - name: Check pyinsightic availability
+      run: python -c "import pyinsightic; print('pyinsightic is available')"
+      
     - name: Run pyinsightic SosoValue analysis for the first project directory
       run: |
         for dir in */ ; do
@@ -36,7 +39,8 @@ jobs:
             echo "Processing folder: $dir"
             export PYTHONPATH="$PYTHONPATH:$(pwd)"
             pip list
-            python -c "import os; os.chdir('${dir}'); analysis = pyinsightic.SosoValue(project_dir='$dir'); analysis.run_analysis();"
+            which pyinsightic
+            pyinsightic pyinsightic.SosoValue(project_dir='$dir').run_analysis()
             echo "Analysis completed for $dir"
             cat "${dir}sosovalue.json"
             break
