--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -27,6 +27,11 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y chromium-browser
         sudo apt-get install -y chromium-chromedriver
+        
+    - name: Check Chromium installation
+      run: |
+        which chromium-browser
+        dpkg -L chromium-browser
 
     - name: Install from private repository
       run: |
