--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -10,8 +10,8 @@ jobs:
   run_analysis:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: write
+      contents: write
+      packages: write      
 
     steps:
     - uses: actions/checkout@v3
