--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Fetches all history for all tags and branches
+        persist-credentials: true  # Allows Git operations
 
     - name: Set up Python
       uses: actions/setup-python@v4
