--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -49,8 +49,9 @@ jobs:
             echo "Processing folder: $dir"
             export PYTHONPATH="$PYTHONPATH:$(pwd)"
             python -c "import pyinsightic; analysis=pyinsightic.SosoValue(project_dir='$dir');analysis.run_analysis()"
+            python -c "import pyinsightic; analysis=pyinsightic.Linkedin(project_dir='$dir');analysis.run_analysis()"
             echo "Analysis completed for $dir"
-            cat "${dir}sosovalue.json"
+            cat "${dir}linkedin.json"
             break
         fi
         done
@@ -65,6 +66,6 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
         git add */sosovalue.json
-        git add */screenshot.png
+        git add */linkedin.json
         git commit -m "Update sosovalue.json analysis results"
         git push
