--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -66,8 +66,8 @@ jobs:
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
-        git add */sosovalue.json
-        git add */linkedin.json
-        git add */twitter.json
+        git add */results/sosovalue.json
+        git add */results/linkedin.json
+        git add */results/twitter.json
         git commit -m "Update social analysis results"
         git push
